[package]
name = "bevy_symbios_multiuser"
version = "0.1.0"
edition = "2024"
authors = ["Janus"]
description = "Multi-user networking for Bevy via ATProto auth with WebRTC p2p messaging."
license = "MIT"
readme = "README.md"
repository = "https://github.com/TheJanusStream/bevy_symbios_multiuser"
keywords = ["networking", "multiplayer"]
categories = ["game-development", "networking"]

[dependencies]
bevy = "0.18"
bevy_matchbox = "0.14"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
serde_json = "1.0"
tracing = "0.1"
thiserror = "2"
matchbox_socket = "0.14"

# Client-side ATProto authentication
reqwest = { version = "0.12", default-features = false, features = ["json"], optional = true }

# Client-side custom signaller (shared)
futures-util = { version = "0.3", optional = true }
futures-timer = { version = "3", optional = true }
uuid = { version = "1", features = ["v4", "v5", "serde"], optional = true }

# Relay server dependencies
axum = { version = "0.8", features = ["ws"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"], optional = true }
dashmap = { version = "6", optional = true }
jsonwebtoken = { version = "9", optional = true }
p256 = { version = "0.13", features = ["pkcs8"], optional = true }
bs58 = { version = "0.5", optional = true }

# Native-only signaller transport
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-tungstenite = { version = "0.32", default-features = false, features = ["async-std-runtime"], optional = true }
async-native-tls = { version = "0.5", optional = true }

# WASM-only signaller transport
[target.'cfg(target_arch = "wasm32")'.dependencies]
ws_stream_wasm = { version = "0.7", optional = true }

[features]
default = ["client", "native-tls"]
client = ["dep:reqwest", "dep:async-tungstenite", "dep:ws_stream_wasm", "dep:futures-util", "dep:futures-timer", "dep:uuid"]
native-tls = ["reqwest/rustls-tls", "async-tungstenite/async-native-tls", "dep:async-native-tls"]
relay = ["dep:axum", "dep:tokio", "dep:dashmap", "dep:futures-util", "dep:uuid", "dep:jsonwebtoken", "dep:reqwest", "reqwest/rustls-tls", "reqwest/stream", "dep:p256", "dep:bs58"]

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
criterion = { version = "0.6", features = ["html_reports"] }

[[bench]]
name = "message_serialization"
harness = false
