[package]
name = "bevy_symbios_multiuser"
version = "0.3.0"
edition = "2024"
authors = ["Janus"]
description = "Multi-user networking for Bevy via ATProto auth with WebRTC p2p messaging."
license = "MIT"
readme = "README.md"
repository = "https://github.com/TheJanusStream/bevy_symbios_multiuser"
keywords = ["multiplayer"]
categories = ["game-development"]

[dependencies]
bevy = "0.18"
bevy_matchbox = "0.14"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
serde_json = "1.0"
tracing = "0.1"
thiserror = "2"
matchbox_socket = "0.14"
url = "2"

# Client-side ATProto authentication
reqwest = { version = "0.12", default-features = false, features = ["json"], optional = true }
proto-blue-oauth = { version = "0.2", optional = true }

# Client-side custom signaller (shared)
futures-util = { version = "0.3", optional = true }
futures-timer = { version = "3", optional = true }
uuid = { version = "1", features = ["v4", "v5", "serde"], optional = true }

# Relay server dependencies
axum = { version = "0.8", features = ["ws"], optional = true }
tower-http = { version = "0.6", features = ["timeout"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net"], optional = true }
dashmap = { version = "6", optional = true }
jsonwebtoken = { version = "9", optional = true }
p256 = { version = "0.13", features = ["pkcs8"], optional = true }
k256 = { version = "0.13", features = ["pkcs8", "ecdsa"], optional = true }
bs58 = { version = "0.5", optional = true }
base64 = { version = "0.22", optional = true }
moka = { version = "0.12", default-features = false, features = ["sync", "future"], optional = true }
percent-encoding = { version = "2", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"], optional = true }

# Native-only signaller transport
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-tungstenite = { version = "0.32", default-features = false, features = ["async-std-runtime"], optional = true }

# WASM-only signaller transport
[target.'cfg(target_arch = "wasm32")'.dependencies]
ws_stream_wasm = { version = "0.7", optional = true }

[features]
default = ["client", "tls"]
client = ["dep:reqwest", "dep:proto-blue-oauth", "dep:async-tungstenite", "dep:ws_stream_wasm", "dep:futures-util", "dep:futures-timer", "dep:uuid"]
tls = ["reqwest/rustls-tls", "async-tungstenite/async-tls"]
relay = ["dep:axum", "dep:tokio", "dep:dashmap", "dep:futures-util", "dep:uuid", "dep:jsonwebtoken", "dep:reqwest", "reqwest/rustls-tls", "reqwest/stream", "dep:p256", "dep:k256", "dep:bs58", "dep:base64", "dep:moka", "dep:tower-http", "dep:percent-encoding", "dep:tracing-subscriber"]
# The `oasis` example predates the 0.3 OAuth refactor (it drives the removed
# `create_session` / `AtprotoCredentials` API). Hide it behind this feature
# so `cargo test`/`cargo check` don't try to build the stale sources until
# the port to the new OAuth flow lands.
legacy_oasis_example = []

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
criterion = { version = "0.6", features = ["html_reports"] }
bevy_egui = "0.39.1"
image = "0.25.10"
futures-lite = "2.6.1"
bevy_asset = "0.18.1"

[[bench]]
name = "message_serialization"
harness = false

# The `oasis` example predates the 0.3 OAuth refactor (it drives the removed
# `create_session` / `AtprotoCredentials` API). Hide it behind a feature flag
# nobody enables by default so `cargo test`/`cargo check` don't try to build
# the stale sources while the port is pending.
[[example]]
name = "oasis"
required-features = ["legacy_oasis_example"]
